--- a/css/index.css
+++ b/css/index.css
@@ -85,7 +85,7 @@ header nav {
 
 header nav a{
     padding:35px;
-    color:grey;
+    color:rgb(50, 11, 11);
     text-decoration: none;
 }
 
@@ -167,4 +167,35 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+.middle-content .boxes .box1 {
+    background: teal;
+}
+.middle-content .boxes .box2 {
+    background:gold;
+}
+.middle-content .boxes .box3 {
+    background: cadetblue;
+}
+.middle-content .boxes .box4 {
+    background: coral;
+}
+.middle-content .boxes .box5 {
+    background: dodgerblue;
+}
+.middle-content .boxes .box6 {
+    background: dodgerblue;
+}
+.middle-content .boxes .box7 {
+    background: darkorchid;
+}
+.middle-content .boxes .box8 {
+    background: hotpink;
+}
+.middle-content .boxes .box9 {
+    background: indigo;
+}
+.middle-content .boxes .box10 {
+    background: dodgerblue;
 }
