--- a/css/index.css
+++ b/css/index.css
@@ -77,6 +77,7 @@ p {
     display:flex;
     margin-top:20px;
     justify-content: space-between;
+    /* position:fixed; */
 }
 
 header nav {
@@ -87,13 +88,66 @@ header nav a{
     padding:35px;
     color:rgb(50, 11, 11);
     text-decoration: none;
+    font-family: Gill Sans, sans-serif;
 }
 
 .logo {
     padding-bottom: 30px;
 }
 
+.banner {
+    padding-bottom: 30px;
+    /* margin-top: 100px; */
+}
+
 /* ******************************* */
+
+/* added by me in ABOUT PAGE */
+
+.section-one {
+    padding: 20px;
+    border-bottom: 1px dashed black;
+} 
+
+.section-two {
+    display:flex;
+    justify-content: space-around;
+    margin-left:20px;
+}
+
+.section-three {
+    display:flex;
+    justify-content: space-around;
+    margin-left:20px;
+}
+
+.card{
+    display:flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    width: 400px;
+    height: 450px;
+    margin-top:30px;
+    padding-bottom: 0px;
+    margin-right: 30px;
+    border-bottom: 1px dashed black;
+}
+
+.section-four {
+    padding: 30px 10px;
+}
+
+button {
+    height: 35px;
+    width: 100px;
+    border-radius: 10px;
+    border-width: 2px;
+    border-color: black;
+}
+
+/* --------------------------- */
+
 
 .top-content {
     display: flex;
